--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<input type="text" required="true" id="name" placeholder="Name"/>
+		<input type="email" required="true" id="email" placeholder="Email"/>
+		<input type="radio" required="true" id="gender_m" name="Gender"/>Male
+		<input type="radio" required="true" id="gender_f" name="Gender"/>Female
+		<select required="true" id="cars">--Please choose an option--
+			<option>BMW</option>
+			<option>Nano</option>
+			<option>Swift</option>
+		</select>
+		<input type="number" required="true" id="age" placeholder="Age"/>
+		<input type="date" required="true" id="dob" />
+		<input type="tel" required="false" id="tel" placeholder="xxx-xxx-xxxx"/>
+		<input type="password" required="true" id="password" placeholder="Password"/>
+		<input type="checkbox" required="true" id="tos"/>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
