--- a/main.html
+++ b/main.html
@@ -9,11 +9,15 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<form>
+		<label>Name</label>
 		<input type="text" required="true" id="name" placeholder="Name"/>
+		<label>Email</label>
 		<input type="email" required="true" id="email" placeholder="Email"/>
+		<label>Gender</label>
 		<input type="radio" required="true" id="gender_m" name="Gender"/>Male
 		<input type="radio" required="true" id="gender_f" name="Gender"/>Female
-		<select required="true" id="cars">--Please choose an option--
+		<label>--Please choose an option--</label>
+		<select required="true" id="cars">
 			<option>BMW</option>
 			<option>Nano</option>
 			<option>Swift</option>
