--- a/main.html
+++ b/main.html
@@ -26,6 +26,7 @@
 		<input type="date" required="true" id="dob" />
 		<input type="tel" required="false" id="tel" placeholder="xxx-xxx-xxxx"/>
 		<input type="password" required="true" id="password" placeholder="Password"/>
+		<label for="tos">I agree to the TOS</label>
 		<input type="checkbox" required="true" id="tos"/>
 	</form>
     <script type="text/javascript" src="./script.js">
