--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<form>
-		<label>Name</label>
+		<label for="name">Name</label>
 		<input type="text" required="true" id="name" placeholder="Name"/>
-		<label>Email</label>
+		<label for="email">Email</label>
 		<input type="email" required="true" id="email" placeholder="Email"/>
-		<label>Gender</label>
+		<label for="gender">Gender</label>
 		<input type="radio" required="true" id="gender_m" name="Gender"/>Male
 		<input type="radio" required="true" id="gender_f" name="Gender"/>Female
-		<label>--Please choose an option--</label>
+		<label for="cars">--Please choose an option--</label>
 		<select required="true" id="cars">
 			<option>BMW</option>
 			<option>Nano</option>
